2012-03-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* hashtabl.d (prepare_resize): check kvtable size against
	ARRAY-DIMENSION-LIMIT

2012-03-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (arraysize_limit_1) [MACOSX, WIDE_HARD]: set to
	2^24-2 since HEAPCODES memory model is used

2012-03-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (signal_handler_thread) [MULTITHREAD, MACOSX]: ignore
	SIGHUP & SIGCONT until I know how to handle them (vfork()
	causes SIGHUP - e.g. (DISASSEMBLE 'CAR))

2012-03-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* foreign.d (FOREIGN-CALL-OUT): foreign call may block. use
	begin/end_block_system_call()

2012-02-13  Bruno Haible  <bruno@clisp.org>

	* clos-genfun2b.lisp (compute-dispatch): Don't blindly assume that
	(bc-and-not class test-class) is non-nil; test it explicitly.
	[bug#3487338]

2012-02-02  Sam Steingold  <sds@gnu.org>

	* socket.d (get_hostname): turn into a function and allocate the
	array in the caller to support gcc 4.7 [patch#3474660]

2012-02-02  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (file_stat_to_STACK): use off_to_I
	instead of L_to_I for st_size [bug#3483340]
	[S_IFMT]: split st_mode into mknod_type_check and check_chmod_mode

2012-01-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (mt_main_actions): main thread should be the same as any
	other - initialize time, reader and set normal exit flag

2012-01-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (xlock_lock_helper): fix possible deadlock when acquiring
	a lock released by xcondition_wait()
	(THREAD-INTERRUPT): release thread's _signal_reenter_ok spinlock on
	error

2012-01-10  Vladimir Tzankov  <vtzankov@gmail.com>

	* xthread.d (testandset) [ARM]: implement spinlocks for ARM

2011-10-17  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (xlock_lock_helper): remove wrong "shortcut" on
	acquiring a lock held by thread that exemption-wait-ed on it
	[bug#3424574]

2011-09-16  Sam Steingold  <sds@gnu.org>
