@@ -1,3 +1,8 @@
+2012-03-27  Sam Steingold  <sds@gnu.org>
+
+	* modules/i18n/gettext.c (bool_char_lconv, int_char_lconv): treat
+	-1 like CHAR_MAX and use sfixnum instead of fixnum
+
 2012-03-10  Vladimir Tzankov  <vtzankov@gmail.com>
 
 	* hashtabl.d (prepare_resize): check kvtable size against
